@@ -299,7 +299,7 @@ char *NTstrerror(int errnum);
 # define HAVE_TIMEPPS_H
 # define HAVE_PPSAPI
 # define CLOCK_ATOM
-/* # define CLOCK_SHM	*/		 /* from ntpd.mak */
+/* # define CLOCK_DUMBCLOCK */	/* refclock_dumbclock.c needs work to open COMx: */
 # define CLOCK_HOPF_SERIAL	/* device 38, hopf DCF77/GPS serial line receiver  */
 # define CLOCK_HOPF_PCI		/* device 39, hopf DCF77/GPS PCI-Bus receiver  */
 # define CLOCK_JUPITER
@@ -307,7 +307,8 @@ char *NTstrerror(int errnum);
 # define CLOCK_NMEA
 # define CLOCK_ONCORE
 # define CLOCK_PALISADE		/* from ntpd.mak */
-/* # define CLOCK_DUMBCLOCK */	/* refclock_dumbclock.c needs work to open COMx: */
+/* # define CLOCK_SHM */
+# define CLOCK_SPECTRACOM	/* refclock_wwvb.c */
 # define CLOCK_TRIMBLEDC
 # define CLOCK_TRIMTSIP 1
 
